# Daedalus

./: .gitignore  .nojekyll  Cargo.toml  DEPLOY_NOW.md  GITHUB_PAGES_FIXES.md  HOW_TO_USE.md  README.md  benchmark_backends.sh  comprehensive_function_tests.sh  daedalus  debug_partial.fr  deploy_github.sh  feature_showcase.fr  index.html  install_core.sh  organize_docs.sh  quick_test.fr  setup_wasm.sh  syntax.fr  test.sh  test_all_features.sh  test_builtin.fr  test_builtin_vm.cir  test_collections.fr  test_core_features.sh  test_debug_simple.fr  test_exact_copy.fr  test_existing_builtin.fr  test_first_30_lines.fr  test_functions_fix.sh  test_jit.fr  test_jit_comprehensive.sh  test_math.fr  test_math_functions.fr  test_new_features.fr  test_simple.fr  test_simple_classes.fr  test_simple_classes.s  test_simple_features.sh  test_simple_functions.fr  (+6 more)
deploy/: .gitignore  README.md  index.html
docs/: JIT_IMPLEMENTATION_COMPLETE.sh  NEXT_ACTIONS.sh  diagnose_jit.sh  install.sh  test_components.sh  vm_test.sh
examples/: async_await.fr  async_await.s  async_concurrency.fr  async_concurrency.s  async_demo.fr  async_demo.s  boolean_test.fr  calculator.fr  calculator.s  classes_traits.fr  classes_traits.s  comments.fr  file_gc.fr  for_loop.fr  foreach_map.fr  foreach_map.s  full_features.fr  full_features.s  hello.fr  hello.s  if_else.fr  if_else.s  list_test.fr  main.s  main_simple.fr  test.s  test_all.s  test_arithmetic.fr  test_arithmetic.s  test_ask_simple.s  test_colon.s  test_func_simple.s  test_if.s  test_jit_arithmetic.fr  test_jit_arithmetic.s  test_jit_final.fr  test_jit_loop.s  test_main.fr  test_main.s  test_native.s  (+16 more)
js/: core_js_engine.js
kernel/: shell.c
kernel_qemu/: gdt.asm  idt.c  interrupt_handlers.c  interrupts.asm  keyboard.c  libc.c  libc.h  main.c  (+2 more)
wasm/: Cargo.toml  build.sh  index.html  start.sh  test.html  verify.sh
wasm/src/: lib.rs
(+39 files in other folders)
