[package]
name = "forge"
version = "1.0.0"
edition = "2021"

[dependencies]
logos = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"

clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"], optional = true }
libc = { version = "0.2", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[lib]
name = "forge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokio", "libc"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "metroman"
path = "src/metroman.rs"

[[bin]]
name = "test_parser"
path = "test_parser.rs"

[[bin]]
name = "core"
path = "src/bin/core.rs"

[[bin]]
name = "fforge"
path = "src/bin/fforge.rs"

[[bin]]
name = "forger"
path = "src/bin/forger.rs"
